# gr-sdrplay3

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md  WINDOWS.md
.conda/: README.md
.conda/recipe/: conda_build_config.yaml  meta.yaml  post-link.bat  pre-unlink.bat
.github/workflows/: ci.yml
apps/: CMakeLists.txt
cmake/Modules/: FindLibSDRplay.cmake  sdrplay3Config.cmake
docs/: CMakeLists.txt  README.sdrplay3
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: CMakeLists.txt  FM-Receiver-SDRplay.grc  rsp1.grc  rsp1a.grc  rsp1b.grc  rsp2.grc  rspduo_dual_tuner.grc  rspduo_dual_tuner_diversity_reception-LNA.grc  rspduo_dual_tuner_diversity_reception.grc  rspduo_dual_tuner_sc16.grc  rspduo_dual_tuner_to_null_sink.grc  rspduo_master.grc  rspduo_single_tuner.grc  rspduo_single_tuner_sc16.grc  rspduo_single_tuner_to_null_sink.grc  rspduo_slave.grc  rspduo_variable_range_test.grc  rspdx-LNA.grc  rspdx-r2-LNA.grc  rspdx-r2.grc  rspdx.grc
grc/: CMakeLists.txt  sdrplay3_rsp1.block.yml  sdrplay3_rsp1a.block.yml  sdrplay3_rsp1b.block.yml  sdrplay3_rsp2.block.yml  sdrplay3_rspduo.block.yml  sdrplay3_rspdx.block.yml  sdrplay3_rspdxr2.block.yml
include/gnuradio/sdrplay3/: CMakeLists.txt  rsp.h  rsp1.h  rsp1a.h  rsp1b.h  rsp2.h  rspduo.h  rspdx.h  rspdxr2.h  sdrplay3_types.h
include/sdrplay3/: CMakeLists.txt  api.h  rsp.h  rsp1.h  rsp1a.h  rsp2.h  rspduo.h  rspdx.h  sdrplay3_types.h
lib/: CMakeLists.txt  rsp1_impl.cc  rsp1_impl.h  rsp1a_impl.cc  rsp1a_impl.h  rsp1b_impl.cc  rsp1b_impl.h  rsp2_impl.cc  rsp2_impl.h  rsp_impl.cc  rsp_impl.h  rspduo_impl.cc  rspduo_impl.h  rspdx_impl.cc  rspdx_impl.h  rspdxr2_impl.cc  rspdxr2_impl.h  sdrplay_api.cc  sdrplay_api.h
python/: CMakeLists.txt  __init__.py
python/bindings/: CMakeLists.txt  python_bindings.cc  rsp1a_python.cc  rsp_python.cc  rspduo_python.cc  rspdx_python.cc  sdrplay3_types_python.cc
python/bindings/docstrings/: rsp1_pydoc_template.h  rsp1a_pydoc_template.h  rsp2_pydoc_template.h  rsp_pydoc_template.h  rspduo_pydoc_template.h  rspdx_pydoc_template.h
python/sdrplay3/: CMakeLists.txt  __init__.py
python/sdrplay3/bindings/: CMakeLists.txt  python_bindings.cc  rsp1_python.cc  rsp1a_python.cc  rsp1b_python.cc  rsp2_python.cc  rsp_python.cc  rspduo_python.cc  rspdx_python.cc  rspdxr2_python.cc  sdrplay3_types_python.cc
python/sdrplay3/bindings/docstrings/: rsp1b_pydoc_template.h  rsp_pydoc_template.h  rspduo_pydoc_template.h  rspdxr2_pydoc_template.h
