# Copyright 2011 Free Software Foundation, Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later
#

install(FILES
    FM-Receiver-SDRplay.grc
    rsp1a.grc
    rsp1b.grc
    rsp2.grc
    rspduo_dual_tuner_diversity_reception-LNA.grc
    rspduo_slave.grc
    rspdx-LNA.grc
    DESTINATION share/gr-sdrplay3/examples
)
